# rust_web

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
migrations/2019-10-27-152149_create_posts/: up.sql
src/: lib.rs  main.rs  routes.rs
src/controllers/: mod.rs  posts.rs  top.rs
src/models/: mod.rs  post.rs  util.rs
src/templates/top/: index.hbs
tests/: main.rs  posts.rs
