[package]
name = "rust_web"
version = "0.1.0"
authors = ["sinsoku <sinsoku.listy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
diesel = { version = "1.4.3", features = ["sqlite"] }

[dev-dependencies]
bytes = "0.4.12"
