[package]
name = "rust_web"
version = "0.1.0"
authors = ["sinsoku <sinsoku.listy@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
diesel = { version = "1.4.3", features = ["sqlite"] }
handlebars = "2.0.2"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"

[dev-dependencies]
bytes = "0.4.12"
